--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 		"biome:lint": "biome lint --write ."
 	},
 	"dependencies": {
+		"leaflet": "^1.9.4",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-leaflet": "^5.0.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
+		"@types/leaflet": "^1.9.21",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
