--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
+		"@tailwindcss/vite": "^4.1.18",
 		"@types/leaflet": "^1.9.21",
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
 		"@vitejs/plugin-react": "^5.1.1",
 		"globals": "^16.5.0",
+		"tailwindcss": "^4.1.18",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4"
 	}
