chore: disable GitHub Copilot in project settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
 	"editor.formatOnSave": true,
 	"editor.detectIndentation": false,
 	"editor.insertSpaces": false,
-
+	"github.copilot.enable": {
+		"*": false
+	},
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
