--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"biome:lint": "biome lint --write ."
 	},
 	"dependencies": {
+		"html2canvas": "^1.4.1",
+		"jspdf": "^3.0.4",
 		"leaflet": "^1.9.4",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
